@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-29T16:20:28Z",
+  "timestamp" : "2022-11-30T16:20:21Z",
   "count_outdated" : 460,
   "uniques_outdated" : 254,
-  "count" : 483,
+  "count" : 482,
   "uniques" : 266,
   "clones" : [
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
