@@ -1,3 +1,11 @@
+2022-11-30T16:20:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3585114759 # 661
+* notice: last 14d: unq all: 2 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 254 460 / 266 483
+* notice: next accum: outdated-unq outdated-all / unq all: 254 460 / 266 482
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-16]
+
 2022-11-29T16:20:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3575973914 # 658
 * notice: last 14d: unq all: 2 23
